[package]
name = "knx_rust"
version = "0.0.1"
edition = "2021"
authors = ["Melchior Moos <melchior.moos@gmail.com>"]

description = "KNX Library"

repository = "https://github.com/memoos/knx-rust"
readme = "README.md"

categories = ["network-programming", "encoding", "embedded"]
keywords = ["KNX", "Network", "SmartHome", "protocol", "network"]
license = "GNU LGPLv3"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
thiserror = "1.0.58"
strum_macros = "0.26.2"
