[package]
name = "knx-rust"
version = "0.0.1"
edition = "2021"
authors = ["Melchior Moos <melchior.moos@gmail.com>"]

description = "KNX Library"

repository = "https://github.com/memoos/knx-rust"
readme = "README.md"

categories = ["network-programming", "encoding", "embedded"]
keywords = ["KNX", "Network", "SmartHome", "protocol", "network"]
license = "LGPL-3.0-only"
exclude = [
    ".github",
]

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
thiserror = "1.0.58"
strum_macros = "0.26.2"

[dev-dependencies]
# for mio example
mio = { version = "0.8.11", features = ["net", "os-poll", "os-ext"] }
mio-timerfd = {git = "https://github.com/aseuss/mio-timerfd", branch = "update_mio_dep"}
#for tokio example
tokio = { version = "1", features = ["time", "net", "rt", "macros", "sync"] }
